fixed contrast issues

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,7 +7,7 @@
 .footer{
     padding-top: 60px;
     padding-bottom: 30px;
-    background: lightcoral;
+    background: rgb(39, 13, 59);
     color:white;
 }
 
