--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -12,7 +12,7 @@
     justify-items: center;
     justify-content: center;
  }
- img{
+ .form-img{
     width: 300px;
    height: 120px;
    margin-bottom: 20px;
